<resources>
    <string name="app_name">UTSPraktik-IF6-10119220-MochWandikaYusgiar</string>

    <string name="judul_form_isi_data">Form Pengisian Data</string>
    <string name="info">Info</string>
    <string name="form_info1">Form berikut ini bertujuan untuk memberikan informasi kepada pusat agar dapat mudah dilaporkan</string>
    <string name="form_info2">kepada pusat agar dapat mudah dilaporkan</string>

    <string name="harus_isi">Harus Diisi</string>

    <string name="jenis_tes">Jenis Tes</string>
    <string name="radio_jenis_rapid">Rapid Antigen</string>
    <string name="radio_jenis_pcr">PCR</string>

    <string name="tanggal_info">Tanggal Terkonfirmasi</string>
    <string name="pilih_tanggal">Pilih Tanggal</string>

    <string name="nik">NIK</string>
    <string name="masuk_nik">Masukkan NIK</string>

    <string name="nama">Nama</string>
    <string name="masuk_nama">Masukkan Nama</string>

    <string name="tanggal_lahir">Tanggal Lahir</string>

    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="radio_laki">Laki-laki</string>
    <string name="radio_perempuan">Perempuan</string>

    <string name="judul_hubungan">Hubungan Dengan Anda</string>
    <string name="radio_orangtua">Orang Tua</string>
    <string name="radio_sutri">Suami/Istri</string>
    <string name="radio_anak">Anak</string>
    <string name="radio_kerabat">Kerabat Lainnya</string>

    <string name="agreement">Dengan ini saya menyetujui bahwa data yang saya isikan adalah benar</string>
</resources>