<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingVertical="20dp"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:src="@drawable/ic_back">
            </ImageView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/judul_form_isi_data"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold">
            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="15dp"
                android:layout_marginHorizontal="16dp"
                android:padding="16dp"
                android:background="@drawable/ic_info_bg">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="15sp">
                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/form_info1">
                </TextView>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <TextView
                    android:id="@+id/jenis_tes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:text="@string/jenis_tes"
                    android:textColor="@color/black"
                    android:textStyle="bold">

                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/jenis_tes"
                    android:text="@string/harus_isi"
                    android:visibility="invisible">
                </TextView>

                <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/radio_jenis"
                    android:layout_below="@+id/jenis_tes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:orientation="vertical">
                    <RadioButton android:id="@+id/radio_rapid"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/radio_jenis_rapid"/>
                    <RadioButton android:id="@+id/radio_pcr"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/radio_jenis_pcr" />
                </RadioGroup>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <TextView
                    android:id="@+id/tanggal_konfir"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:text="@string/tanggal_info"
                    android:textColor="@color/black"
                    android:textStyle="bold">

                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/tanggal_konfir"
                    android:text="@string/harus_isi"
                    android:visibility="invisible">
                </TextView>



            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <TextView
                    android:id="@+id/nik"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:text="@string/nik"
                    android:textColor="@color/black"
                    android:textStyle="bold">

                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/nik"
                    android:text="@string/harus_isi"
                    android:visibility="invisible">
                </TextView>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/nik"
                    android:layout_marginTop="8dp"
                    android:layout_marginHorizontal="16dp"
                    android:padding="10dp"
                    android:background="@drawable/ic_edit_bg">

                </EditText>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <TextView
                    android:id="@+id/nama"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:text="@string/nama"
                    android:textColor="@color/black"
                    android:textStyle="bold">

                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/nama"
                    android:text="@string/harus_isi"
                    android:visibility="invisible">
                </TextView>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/nama"
                    android:layout_marginTop="8dp"
                    android:layout_marginHorizontal="16dp"
                    android:padding="10dp"
                    android:background="@drawable/ic_edit_bg">

                </EditText>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <TextView
                    android:id="@+id/tanggal_lahir"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:text="@string/tanggal_lahir"
                    android:textStyle="bold"
                    android:textColor="@color/black">

                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/tanggal_lahir"
                    android:text="@string/harus_isi"
                    android:visibility="invisible">
                </TextView>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tanggal_lahir"
                    android:layout_marginTop="8dp"
                    android:layout_marginHorizontal="16dp"
                    android:padding="10dp"
                    android:background="@drawable/ic_edit_bg">

                </EditText>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <TextView
                    android:id="@+id/jenis_kelamin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:text="@string/jenis_kelamin"
                    android:textColor="@color/black"
                    android:textStyle="bold">

                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/jenis_kelamin"
                    android:text="@string/harus_isi"
                    android:visibility="invisible">
                </TextView>

                <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/radio_jenis_kelamin"
                    android:layout_below="@+id/jenis_kelamin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:orientation="vertical">
                    <RadioButton android:id="@+id/radio_laki"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/radio_laki"/>
                    <RadioButton android:id="@+id/radio_perempuan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/radio_perempuan" />

                </RadioGroup>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <TextView
                    android:id="@+id/hubungan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:text="@string/judul_hubungan"
                    android:textColor="@color/black"
                    android:textStyle="bold">

                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/hubungan"
                    android:text="@string/harus_isi"
                    android:visibility="invisible">
                </TextView>

                <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/radio_hubungan"
                    android:layout_below="@+id/hubungan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:orientation="vertical">
                    <RadioButton android:id="@+id/radio_ortu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/radio_orangtua"/>
                    <RadioButton android:id="@+id/radio_sutri"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/radio_sutri" />
                    <RadioButton android:id="@+id/radio_anak"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/radio_anak"/>
                    <RadioButton android:id="@+id/radio_kerabat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/radio_kerabat" />

                </RadioGroup>

            </RelativeLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="16dp">

                <CheckBox android:id="@+id/checkbox_meat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/agreement" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/lanjut1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_button_green"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="15dp">

            </androidx.appcompat.widget.AppCompatButton>

        </LinearLayout>

    </ScrollView>



</LinearLayout>